# Secret-Management-Dashboard-Desktop

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  PLAN.md  README.md  ROADMAP.md  docker-compose.yml  netlify.toml  package-lock.json  package.json  render.yaml
.claude/: settings.local.json
apps/api_py/: .env.example  README.md  alembic.ini  pyproject.toml
apps/api_py/alembic/: env.py
apps/api_py/alembic/versions/: 20260216_0001_initial.py  20260222_0002_add_user_preferences.py  20260226_0003_register_invites_supabase_id.py  20260308_0004_refresh_token_session_meta.py  20260308_0005_service_tokens.py  20260324_0006_deactivate_all_users.py  20260325_0007_change_secret_type_to_string.py
apps/api_py/app/: __init__.py  main.py
apps/api_py/app/api/: deps.py  router.py
apps/api_py/app/api/routes/: audit.py  auth.py  dashboard.py  exports.py  imports.py  organizations.py  project_manage.py  projects.py  search.py  secrets.py  service_access.py  users.py
apps/api_py/app/core/: config.py  cookies.py  crypto.py  rate_limit.py  security.py
apps/api_py/app/db/: session.py
apps/api_py/app/schemas/: audit.py  auth.py  dashboard.py  imports.py  projects.py  secrets.py  users.py
apps/api_py/app/services/: auth_service.py  email_service.py  import_parser.py  registration_service.py  supabase_auth.py
apps/api_py/scripts/: migrate.py  run_dev.py  seed_dev.py
apps/api_py/tests/: conftest.py  test_audit.py  test_auth.py  test_authorization.py  test_import_export.py  test_organizations.py  test_projects.py  test_register.py  test_secrets.py  test_users.py
(+140 files in other folders)
